<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boxz4BLE</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    
    <string name="home_title">BOXZ MENU</string>
    <string name="home_auto">AUTO</string>
    <string name="home_config">CONFIG</string>
    <string name="home_start">START</string>
    <string name="home_help">HELP</string>

</resources>