<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/home_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_auto"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="75dp"
        android:background="#00ff00"
        android:gravity="center"
        android:text="@string/home_auto"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/tv_auto"
        android:background="#8a2be2"
        android:gravity="center"
        android:text="@string/home_start"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_config"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_below="@id/tv_auto"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="20dp"
        android:background="#ffd700"
        android:gravity="center"
        android:text="@string/home_config"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:layout_below="@id/tv_auto"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/tv_config"
        android:background="#ff00ff"
        android:gravity="center"
        android:text="@string/home_help"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>